--- a/src/app/modules/board/components/column/column.component.scss
+++ b/src/app/modules/board/components/column/column.component.scss
@@ -36,6 +36,7 @@
 
     .tasks {
         text-align: center;
+        height: 100%;
     }
 
     button {
@@ -52,15 +53,16 @@
     font-size: 12px;
 }
 
-.example-list {
+.column-list {
     min-height: 60px;
     border-radius: 4px;
     overflow: hidden;
     display: block;
+    height: 100%;
 
 }
 
-.example-box {
+.task-box {
     border-bottom: solid 1px #ccc;
     color: rgba(0, 0, 0, 0.87);
     display: flex;
@@ -88,11 +90,11 @@
     transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
 }
 
-.example-box:last-child {
+.task-box:last-child {
     border: none;
 }
 
-.example-list.cdk-drop-list-dragging .example-box:not(.cdk-drag-placeholder) {
+.column-list.cdk-drop-list-dragging .task-box:not(.cdk-drag-placeholder) {
     transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
 }
 
