--- a/src/app/core/components/create-new-board-popup/create-new-board-popup.component.html
+++ b/src/app/core/components/create-new-board-popup/create-new-board-popup.component.html
@@ -1,4 +1,4 @@
-<h2 mat-dialog-title i18n="Simple title@@boardTitle">Title</h2>
+<h2 mat-dialog-title i18n="Simple title@@boardTitle">Create new board</h2>
 <div mat-dialog-content>
     <form [formGroup]="boardForm" *ngIf="boardForm" name="boardForm">
         <mat-form-field class="create-board-form-field" appearance="fill">
@@ -43,7 +43,7 @@
     >
         Create
     </button>
-    <button at-stroked-button class="btn-close" mat-dialog-close i18n="Button message@@cancelText">
+    <button mat-stroked-button class="btn-close" mat-dialog-close i18n="Button message@@cancelText">
         Cancel
     </button>
 </mat-dialog-actions>
