--- a/src/app/core/components/create-new-board-popup/create-new-board-popup.component.html
+++ b/src/app/core/components/create-new-board-popup/create-new-board-popup.component.html
@@ -37,6 +37,7 @@
 <mat-dialog-actions class='create-board-controls'>
     <button
         mat-button
+        [routerLink]="['main', 'list']"
         [mat-dialog-close]='boardForm.value'
         [disabled]='boardForm.invalid'
         i18n='Button message@@createText'
