--- a/src/app/modules/board/containers/board-shell/board-shell.component.scss
+++ b/src/app/modules/board/containers/board-shell/board-shell.component.scss
@@ -4,7 +4,7 @@
     justify-content: flex-start;
     padding: 50px 50px 20px;
     height: 90%;
-    overflow-x: scroll;
+    overflow-x: auto;
     box-sizing: border-box;
 
 
